--- a/ArtWebsite/HTML/stylesheet.css
+++ b/ArtWebsite/HTML/stylesheet.css
@@ -33,6 +33,7 @@ marquee {
     background-image: url("registration page.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    padding-right: 5%;
   }
   
   .split {
@@ -43,7 +44,9 @@ marquee {
     top: 20%;
     overflow-x: hidden;
     padding-top: 20px;
+  
   }
+
   /* Style the links inside the navigation bar */
   .topnav a {
     float: left;
@@ -56,15 +59,118 @@ marquee {
   
   /* Change the color of links on hover */
   .topnav a:hover {
-    background-color: rgb(30, 93, 175);
+    background-color: rgb(238, 162, 48);
     color: black;
   }
   
-  /* Add a color to the active/current link */
-  .topnav a.active {
-    background-color: #ce9325;
-    color: white;
+  
+  /* Add a black background color to the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: rgb(56, 211, 164);
+  color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color: #ec9718;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type=text] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
   }
-.action{
-    text-align:right
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+  }
+}
+.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+/* Container holding the image and the text */
+.container {
+  position: relative;
+  text-align: left;
+  color: rgb(26, 24, 20);
+}
+
+/* Bottom left text */
+.bottom-left {
+  position: absolute;
+  bottom: 8px;
+  left: 16px;
+}
+
+/* Top left text */
+.top-left {
+  position: absolute;
+  top: 8px;
+  left: 16px;
+}
+
+/* Top right text */
+.top-right {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+}
+
+/* Bottom right text */
+.bottom-right {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+}
+
+/* Centered text */
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.imgs{
+  border-radius: 10%;
+  border: #1b1a17;
+  border-style: dotted;
 }
